style: fix info-card overlapping tool-bar

--- a/res/client/css/modules/positions.scss
+++ b/res/client/css/modules/positions.scss
@@ -8,4 +8,4 @@ $icon-height: 20px;
 
 /* Horizontal spacing */
 $doc-margin: 70px;
-
+$graph-margin-right: 20px;
