--- a/res/client/css/partials/info-card.scss
+++ b/res/client/css/partials/info-card.scss
@@ -2,8 +2,8 @@
 
 .info-container {
   position: absolute;
-  right: $doc-margin;
-  top: $two-baselines;
+  right: $graph-margin-right;
+  top: 130px;
 }
 
 .subtitle{
